--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,17 @@ input {
   width: 100%;
 }
 
+.loader {
+  border: 10px solid #fff;
+  border-radius: 50%;
+  border-top: 10px solid #bebebe;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 1s linear infinite; /* Safari */
+  animation: spin 1s linear infinite;
+  margin: 10em auto 0;
+}
+
 @media only screen and (max-width: 767px)  {
   body {
     padding-top: 2em;
