--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@ input {
 }
 
 .loader {
-  border: 10px solid #fff;
+  border: 10px solid #e6e6e6;
   border-radius: 50%;
   border-top: 10px solid #bebebe;
   width: 120px;
@@ -88,6 +88,16 @@ input {
   -webkit-animation: spin 1s linear infinite; /* Safari */
   animation: spin 1s linear infinite;
   margin: 10em auto 0;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 @media only screen and (max-width: 767px)  {
